
 * A new aor option has been added: "qualify_timeout", which sets the timeout
   in seconds for a qualify.  The default is 3 seconds.  This overrides the
   hard coded 32 seconds in pjproject.

 * Endpoint status will now change to "Unreachable" when all contacts are
   unavailable.  When any contact becomes available, the endpoint will status
   will change back to "Reachable".

res_ari_channels
------------------
 * Two new events, 'ChannelHold' and 'ChannelUnhold', have been added to the
   events data model. These events are raised when a channel indicates a hold
   or unhold, respectively.

func_holdintercept
------------------
 * A new dialplan function, HOLD_INTERCEPT, has been added. This function, when
   placed on a channel, intercepts hold/unhold indications signalled by the
   channel and prevents them from moving on to other channels in a bridge with
   the hold initiator. Instead, AMI or ARI events are raised indicating that
   the channel wanted to place someone on hold. This allows external
   applications to implement their own custom hold/unhold logic.

------------------------------------------------------------------------------
--- Functionality changes from Asterisk 13.2.0 to Asterisk 13.3.0 ------------
------------------------------------------------------------------------------

chan_pjsip/app_transfer
------------------
 * The Transfer application, when used with chan_pjsip, now supports using
   a PJSIP endpoint as the transfer destination. This is in addition to
   explicitly specifying a SIP URI to transfer to.

res_ari_channels
------------------
 * The ARI /channels resource now supports a new operation, 'redirect'. The
   redirect operation will perform a technology and state specific redirection
   on the channel to a specified endpoint or destination. In the case of SIP
   technologies, this is either a 302 Redirect response to an on-going INVITE
   dialog or a SIP REFER request.

res_pjsip
------------------